--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,10 @@ footer{
 }
 
 #userPhoto{
-    width: 96px;
-    height: 96px;
+    width: 128px;
+    height: 128px;
     display: block;
-    margin: 35px auto 20px;
+    margin: 20px auto 10px;
     border-radius: 50%;
     border: solid var(--color) 2px;
 }
@@ -77,7 +77,10 @@ footer{
 .link{
     display: block;
     margin-bottom: 20px;
-    padding: 17px;
+    padding-left: 	17px;
+	padding-right: 	17px;
+	padding-top: 	10px;
+	padding-bottom: 10px;
     font-weight: 500;
     border-radius: 5px;
     border: dashed var(--color) 2px;
