Add themed icons

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,42 @@
     src: url(RobotoMono-Medium.ttf) format("truetype");
 }
 
+@media (prefers-color-scheme: light) {
+    .icon-discord {
+		content:url("/img/icons8/black/discord.svg");
+	}
+	.icon-github {
+		content:url("/img/icons8/black/github.svg");
+	}
+	.icon-instagram {
+		content-url("/img/icons8/black/instagram.svg");
+	}
+	.icon-mail {
+		content:url("/img/icons8/black/mail.png");
+	}
+	.icon-twitter {
+		content:url("/img/icons8/black/twitter.svg");
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+    .icon-discord {
+		content:url("/img/icons8/white/discord.svg");
+	}
+	.icon-github {
+		content:url("/img/icons8/white/github.svg");
+	}
+	.icon-instagram {
+		content:url("/img/icons8/white/instagram.svg");
+	}
+	.icon-mail {
+		content:url("/img/icons8/white/mail.png");
+	}
+	.icon-twitter {
+		content:url("/img/icons8/white/twitter.svg");
+	}
+}
+
 :root {
     --background: white;
     --color: #232333;
