--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Roboto Mono";
-    src: url(RobotoMono-Medium.ttf) format("truetype");
+    src: url("/fonts/RobotoMono-Medium.ttf") format("truetype");
 }
 
 @media (prefers-color-scheme: light) {
