--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ footer {
 
 @media (orientation: portrait) {
 	#userPhoto {
-		margin: 5px;
+		margin: 5px auto 5px;
 	}
 }
 
@@ -165,4 +165,22 @@ footer {
 		--background: #202124;
 		--color: white;
 	}
+}
+
+.spin360 {
+    -moz-transition: all 0.0s;
+    -webkit-transition: all 0.0s;
+    transition: all 0.0s;
+}
+
+.spin360.start{
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+	
+	-webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
