--- a/css/style.css
+++ b/css/style.css
@@ -168,19 +168,19 @@ footer {
 }
 
 .spin360 {
-    -moz-transition: all 0.0s;
-    -webkit-transition: all 0.0s;
-    transition: all 0.0s;
+    -moz-transition: all 0.0s cubic-bezier(.27,-0.8,.27,1.55);
+    -webkit-transition: all 0.0s cubic-bezier(.27,-0.8,.27,1.55);
+    transition: all 0.0s cubic-bezier(.27,-0.8,.27,1.55);
 }
 
 .spin360.start{
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    -ms-transform: rotate(720deg);
+    -moz-transform: rotate(720deg);
+    -webkit-transform: rotate(720deg);
+    transform: rotate(720deg);
 	
-	-webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+	-webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    transition: all 1s ease;
 }
