--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,12 @@
 	--font: "Roboto Mono", monospace;
 }
 
+#about {
+    text-align: center;
+    margin: 0px;
+    font-size: 1rem;
+}
+
 body {
     background-color: var(--background);
     color: var(--color);
@@ -94,18 +100,19 @@ footer {
     height: 128px;
     display: block;
     border-radius: 50%;
+    margin-bottom: 2px;
     border: solid var(--color) 2px;
 }
 
 @media (orientation: landscape) {
 	#userPhoto {
-		margin: 20px auto 10px;
-	}
+		margin-top: 20px auto 10px;
+    }
 }
 
 @media (orientation: portrait) {
 	#userPhoto {
-		margin: 5px auto 5px;
+		margin-top: 5px auto 5px;
 	}
 }
 
