add boilerplate selection style

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
     .icon-f-email {     content: url("/img/icons8/black/folder-email.png")}
     .icon-f-puzzle {    content: url("/img/icons8/black/folder-puzzle.png")}
     .icon-f-animal {    content: url("/img/icons8/black/folder-animal.png")}
+    .icon-f-animal.selected {    content: url("/img/icons8/black/folder-animal-sel.png")}
     .icon-f-heart {     content: url("/img/icons8/black/folder-heart.png")}
     
     footer a {
@@ -30,6 +31,7 @@
     .icon-f-email {     content: url("/img/icons8/white/folder-email.png")}
     .icon-f-puzzle {    content: url("/img/icons8/white/folder-puzzle.png")}
     .icon-f-animal {    content: url("/img/icons8/white/folder-animal.png")}
+    .icon-f-animal.selected {    content: url("/img/icons8/white/folder-animal-sel.png")}
     .icon-f-heart {     content: url("/img/icons8/white/folder-heart.png")}
 
     footer a {
@@ -147,11 +149,6 @@ footer {
     height: 3rem;
     margin: 5px;
     text-decoration: none;  
-}
-
-.navButton.selected {
-    border-radius: 5px;
-    border: dashed var(--color) 2px;
 }
 
 .navButton img {
