--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @font-face {
     font-family: "Roboto Mono";
+    font-display: swap;
     src: url("/fonts/RobotoMono-Medium.ttf") format("truetype");
 }
 
