Replace png with .webp format

--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,20 @@
     .icon-discord {content: url("/img/icons8/black/discord.svg")}
 	.icon-github {content: url("/img/icons8/black/github.svg")}
 	.icon-instagram {content: url("/img/icons8/black/instagram.svg")}
-	.icon-mail {content: url("/img/icons8/black/mail.png")}
+	.icon-mail {content: url("/img/icons8/black/mail.webp")}
 	.icon-twitter {content: url("/img/icons8/black/twitter.svg")}
 
-    .icon-f-email {content: url("/img/icons8/black/folder-email.png")}
-    .icon-f-email.selected {content: url("/img/icons8/black/folder-email-sel.png")}
+    .icon-f-email {content: url("/img/icons8/black/folder-email.webp")}
+    .icon-f-email.selected {content: url("/img/icons8/black/folder-email-sel.webp")}
 
-    .icon-f-puzzle {content: url("/img/icons8/black/folder-puzzle.png")}
-    .icon-f-puzzle.selected {content: url("/img/icons8/black/folder-puzzle-sel.png")}
+    .icon-f-puzzle {content: url("/img/icons8/black/folder-puzzle.webp")}
+    .icon-f-puzzle.selected {content: url("/img/icons8/black/folder-puzzle-sel.webp")}
 
-    .icon-f-animal {content: url("/img/icons8/black/folder-animal.png")}
-    .icon-f-animal.selected {content: url("/img/icons8/black/folder-animal-sel.png")}
+    .icon-f-animal {content: url("/img/icons8/black/folder-animal.webp")}
+    .icon-f-animal.selected {content: url("/img/icons8/black/folder-animal-sel.webp")}
 
-    .icon-f-heart {content: url("/img/icons8/black/folder-heart.png")}
-    .icon-f-heart.selected {content: url("/img/icons8/black/folder-heart-sel.png")}
+    .icon-f-heart {content: url("/img/icons8/black/folder-heart.webp")}
+    .icon-f-heart.selected {content: url("/img/icons8/black/folder-heart-sel.webp")}
     
     footer a {
 		color: black;
@@ -32,20 +32,20 @@
     .icon-discord {content: url("/img/icons8/white/discord.svg")}
 	.icon-github {content: url("/img/icons8/white/github.svg")}
 	.icon-instagram {content: url("/img/icons8/white/instagram.svg")}
-	.icon-mail {content: url("/img/icons8/white/mail.png")}
+	.icon-mail {content: url("/img/icons8/white/mail.webp")}
 	.icon-twitter {content: url("/img/icons8/white/twitter.svg")}
 
-    .icon-f-email {content: url("/img/icons8/white/folder-email.png")}
-    .icon-f-email.selected {content: url("/img/icons8/white/folder-email-sel.png")}
+    .icon-f-email {content: url("/img/icons8/white/folder-email.webp")}
+    .icon-f-email.selected {content: url("/img/icons8/white/folder-email-sel.webp")}
 
-    .icon-f-puzzle {content: url("/img/icons8/white/folder-puzzle.png")}
-    .icon-f-puzzle.selected {content: url("/img/icons8/white/folder-puzzle-sel.png")}
+    .icon-f-puzzle {content: url("/img/icons8/white/folder-puzzle.webp")}
+    .icon-f-puzzle.selected {content: url("/img/icons8/white/folder-puzzle-sel.webp")}
 
-    .icon-f-animal {content: url("/img/icons8/white/folder-animal.png")}
-    .icon-f-animal.selected {content: url("/img/icons8/white/folder-animal-sel.png")}
+    .icon-f-animal {content: url("/img/icons8/white/folder-animal.webp")}
+    .icon-f-animal.selected {content: url("/img/icons8/white/folder-animal-sel.webp")}
 
-    .icon-f-heart {content: url("/img/icons8/white/folder-heart.png")}
-    .icon-f-heart.selected {content: url("/img/icons8/white/folder-heart-sel.png")}
+    .icon-f-heart {content: url("/img/icons8/white/folder-heart.webp")}
+    .icon-f-heart.selected {content: url("/img/icons8/white/folder-heart-sel.webp")}
 
     footer a {
 		color: white;
