--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ body {
     color: var(--color);
     font-family: var(--font);
     margin: 0;
+    margin-top: 10px;
     padding: 0;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
